--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
     <link rel="shortcut icon" type="image/x-icon" href="{{ url_for('static',filename='Icons/favicon.icon') }}" />
 
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="{{ url_for('static',filename='Bootstrap/css/bootstrap.min.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <!-- Animations -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -324,7 +324,7 @@
     </footer>
 
     <!-- JS -->
-    <script src="{{ url_for('static',filename='Bootstrap/js/bootstrap.min.js') }}"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="{{ url_for('static',filename='JS/header.js') }}"></script>
     <script src="https://kit.fontawesome.com/167f47e70e.js" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
