--- a/backend/static/CSS/index.css
+++ b/backend/static/CSS/index.css
@@ -35,14 +35,10 @@ label {
 /* Home */
 .bg_image {
     height:100vh;
-    background: url(/backend/static/Images/bg.jpg);
+    background: url(../Images/bg.jpg);
     background-size:cover;
     position:relative;
 }
-
-@font-face {
-    font-family: Bungee;
-    src: url('/backend/static/Fonts/BebasNeue-Regular.ttf'); }
 
 .home_title {
     font-size: 5rem;
