--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -76,7 +76,7 @@
             <h1 class="text-center">O mnie</h1>
             <div class="row mt-4">
                 <div class="col-lg-4">
-                    <img src="../Images/about.png" class="imageAboutPage" alt="">
+                    <img src="{{ url_for('static',filename='Images/about.jpg') }}" class="imageAboutPage" alt="">
                 </div>
                 <div class="col-lg-8 p-5">
                     <h3 style="font-weight: bold">Kamil Żegleń</h3>
