--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Title -->
-    <title>{% block title %}{% endblock %}</title>
+    <title>Kamil Żegleń</title>
 
     <!-- Icon for FF, Chrome, Opera -->
     <link rel="icon" type="image/png" href="{{ url_for('static',filename='Icons/favicon-16x16.png') }}" sizes="16x16">
